Just setting up my Gitub2

--- a/tweet-clone.html
+++ b/tweet-clone.html
@@ -8,6 +8,35 @@
   <title>HTML &amp; CSS | Ironhack PreWork |</title>
 </head>
 <body>
-
+    <div class="twttr-content">
+        <div class="header">
+                <div class="account">
+                      <img id="profile-picture" src="img/profile-picture.jpg" alt="profile-picture">
+                      <img src="img/account-logo.jpg" alt="account-logo">
+                      <p id="name">jack</p>
+                      <img src="img/validated-account.jpg" alt="validated-account">
+                      <p id="at-jack">@jack</p>
+                </div>
+                <div class="follow">
+                    <div class="follow-button">
+                      <img class="twitter-logo" src="img/twitter-logo.jpg" alt="twitter-logo">
+                      <p>Follow</p>
+                    </div>
+                </div>
+        </div>
+        <div class="text-content">
+            <p id="main-text">just setting up my twttr</p>
+            <p id="main-time"><time>9:50PM - 21 Mar 2006</time></p>
+        </div>
+        <div class="footer">
+          <nav>
+            <a href="#"><img src="img/reply.jpg" alt="reply"></a>
+            <a href="#"><img src="img/retweet.jpg" alt="retweet"></a>
+            <p id="retweet">92,555</p>
+            <a href="#"><img src="img/favorite.jpg" alt="favorite"></a>
+            <p id="favorite">71,111</p>
+          </nav>
+        </div>
+    </div>
 </body>
 </html>
