--- a/tweet-clone.html
+++ b/tweet-clone.html
@@ -11,16 +11,20 @@
     <div class="twttr-content">
         <div class="header">
                 <div class="account">
-                      <img id="profile-picture" src="img/profile-picture.jpg" alt="profile-picture">
-                      <img src="img/account-logo.jpg" alt="account-logo">
-                      <p id="name">jack</p>
-                      <img src="img/validated-account.jpg" alt="validated-account">
-                      <p id="at-jack">@jack</p>
+                        <div class="profile-picture">
+                            <img src="img/profile-picture.jpg" alt="profile-picture">
+                        </div>
+                        <fieldset id="account-info">
+                            <img id="account-logo"src="img/account-logo.jpg" alt="account-logo">
+                            <p id="name">jack</p>
+                            <img src="img/validated-account.jpg" alt="validated-account">
+                      </fieldset>
+                    <p id="at-jack">@jack</p>
                 </div>
                 <div class="follow">
                     <div class="follow-button">
                       <img class="twitter-logo" src="img/twitter-logo.jpg" alt="twitter-logo">
-                      <p>Follow</p>
+                      <p id="logo-text">Follow</p>
                     </div>
                 </div>
         </div>
@@ -30,10 +34,10 @@
         </div>
         <div class="footer">
           <nav>
-            <a href="#"><img src="img/reply.jpg" alt="reply"></a>
-            <a href="#"><img src="img/retweet.jpg" alt="retweet"></a>
+            <a href="#"><img id="reply"src="img/reply.jpg" alt="reply"></a>
+            <a href="#"><img id="retwt"src="img/retweet.jpg" alt="retweet"></a>
             <p id="retweet">92,555</p>
-            <a href="#"><img src="img/favorite.jpg" alt="favorite"></a>
+            <a href="#"><img id="favor"src="img/favorite.jpg" alt="favorite"></a>
             <p id="favorite">71,111</p>
           </nav>
         </div>
