--- a/tweet-clone.html
+++ b/tweet-clone.html
@@ -9,28 +9,28 @@
 </head>
 <body>
     <div class="twttr-content">
-        <div class="header">
+        <div id="header">
                 <div class="account">
                         <div class="profile-picture">
                             <img src="img/profile-picture.jpg" alt="profile-picture">
                         </div>
-                        <fieldset id="account-info">
+                        <div class="account-info">
                             <img id="account-logo"src="img/account-logo.jpg" alt="account-logo">
                             <p id="name">jack</p>
-                            <img src="img/validated-account.jpg" alt="validated-account">
-                      </fieldset>
+                            <img id="validated"src="img/validated-account.jpg" alt="validated-account">
+                      </div>
                     <p id="at-jack">@jack</p>
                 </div>
                 <div class="follow">
                     <div class="follow-button">
                       <img class="twitter-logo" src="img/twitter-logo.jpg" alt="twitter-logo">
-                      <p id="logo-text">Follow</p>
+                      <p>Follow</p>
                     </div>
                 </div>
         </div>
         <div class="text-content">
-            <p id="main-text">just setting up my twttr</p>
-            <p id="main-time"><time>9:50PM - 21 Mar 2006</time></p>
+            <p>just setting up my twttr</p>
+            <p><time>9:50PM - 21 Mar 2006</time></p>
         </div>
         <div class="footer">
           <nav>
